flux/manifests/wakapi/wakapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: wakapi
  labels:
    app: wakapi
spec:
  selector:
    matchLabels:
      app: wakapi
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  wakapi
      labels:
        app: wakapi
    spec:
      containers:
      - name: wakapi
        image: ghcr.io/muety/wakapi:2.11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: wakapi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wakapi-data-pvc
      restartPolicy: Always
