flux/manifests/wakapi/wakapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wakapi-svc
  namespace: wakapi
spec:
  selector:
    app: wakapi
  type: ClusterIP
  ports:
  - name: wakapi
    protocol: TCP
    port: 3000
    targetPort: 3000
