flux/manifests/wakapi/wakapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wakapi-ingress
  namespace: wakapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - wakapi.macks.cloud
    secretName: wakapi-tls
  rules:
  - host: wakapi.macks.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wakapi
            port:
              number: 3000
